@@ -2,6 +2,7 @@ Changelog for Percona Toolkit
 
 v3.0.7 
 
+ * Feature      PT-644 : Added --mysql-only option to pt-stalk for RDS
  * Fixed bug    PT-1256: pt-table-sync does not use the character set for the table it is synchronizing
 
 v3.0.6 released 2017-12-20
